# nagare

./: .gitignore  Cargo.toml  README.md  _LIB_DEF.md  build.sh  demo-sections-design.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
.github/workflows/: build-demo.yml  ci.yml  deploy-demo.yml  gh-pages.yml  pages-deploy.yml
assets/: README.md  main-B6b5y8kZ.js  main-lLniPeZv.js
benches/: benchmark.js  debug-benchmark.mjs  debug-objects-large.mjs  debug-verification.mjs  demo-benchmark.mjs  fast-benchmark.mjs  final-benchmark.mjs  optimized-comparison.mjs  production-benchmark.mjs  production-demo.mjs  quick-check.mjs  rxjs-comparison.js  simple-benchmark.mjs  simple-comparison.mjs  standard-suite-src.mjs  standard-suite.mjs  test-large-objects.mjs  test-objects.mjs  three-way-comparison.mjs  ultimate-optimized.mjs
demo/: demo.js  index-old.html  index-sectioned.html  index.html  vite.config.js
docs/: index.html
docs/assets/: main-s8FEXYwr.js  nagare-Blca_Ns2.mjs  nagare-CnWdEWk1.mjs
durable-objects/: river-do.ts
examples/: basic.ts
src/: backpressure.rs  backpressure.ts  byob.rs  byob.ts  index.ts  lib.rs  nagare-optimized.ts  nagare.ts  operators.rs  operators.ts  river-optimized.ts  river.rs  river.ts  serialization.rs  serialization.ts  simd_ops.rs  sources.ts  turbo-acceleration.ts  types-pkg.d.ts  types.ts  wasm-loader.ts  wasm-optimizations.ts
tests/: backpressure.test.ts  combination.test.ts  combine-latest.test.ts  error-handling.test.ts  jit-parity.test.ts  nagare.test.ts  operators-extra.test.ts  parity-rxjs.test.ts  river.test.ts  setup.ts  time-operators.test.ts  wasm-real.test.ts  wasm_tests.rs
(+4 files in other folders)
