[package]
name = "nagare"
version = "0.1.0"
edition = "2021"
authors = ["aid-on"]
description = "WASM-first, stream-centric library for edge computing"
license = "MIT"
repository = "https://github.com/aid-on/nagare"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[dependencies]
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "WritableStream",
  "WritableStreamDefaultWriter",
  "WebSocket",
  "MessageEvent",
  "BinaryType",
  "AbortController",
  "AbortSignal",
  "console"
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
postcard = { version = "1.0", features = ["alloc"] }
futures = "0.3"
pin-project = "1.1"
thiserror = "2.0"
uuid = { version = "1.6", features = ["v4", "js"] }
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-rayon = { version = "1.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

[features]
# Minimal web build by default to keep Pages build stable
default = ["web_min"]
web_min = []
simd = []
river = []
byob = []
serialization = []
parallel = ["wasm-bindgen-rayon"]
